--- a/templates/statefulset.yaml
+++ b/templates/statefulset.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{ include "cn.fullname" . }}
   labels:
@@ -8,6 +8,7 @@ metadata:
   {{- toYaml .Values.additionalLabels | nindent 4 }}
 {{- end }}
 spec:
+  serviceName: {{ include "cn.fullname" . }}
   replicas: {{ .Values.connector.replicas }}
   selector:
     matchLabels:
@@ -101,10 +102,16 @@ spec:
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-    {{- with .Values.affinity }}
       affinity:
-        {{- toYaml . | nindent 8 }}
-    {{- end }}
+        podAntiAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                  - key: app.kubernetes.io/instance
+                    operator: In
+                    values:
+                      - {{ .Release.Name }}
+              topologyKey: kubernetes.io/hostname
     {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
